// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InAppToast snapshots renders info icon 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "left": 12.5,
        "position": "absolute",
        "right": 12.5,
        "zIndex": 9999,
      },
      {
        "top": 8,
      },
      {},
    ]
  }
>
  <View
    accessibilityLabel="Info. . Touchez pour ouvrir."
    accessibilityRole="text"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "gap": 8.5,
          "minHeight": 64,
          "paddingHorizontal": 12.5,
          "paddingVertical": 10.5,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E5E7EB",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        false,
        {
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#3B82F620",
          },
        ]
      }
    >
      <Text
        color="#3B82F6"
        name="information-circle"
        size={20}
      >
        information-circle
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15.5,
              "lineHeight": 18,
            },
            {
              "color": "#111827",
            },
          ]
        }
      >
        Info
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
          "paddingVertical": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 2,
              "height": 18,
              "width": 3,
            },
            {
              "backgroundColor": "#D1D5DB",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`InAppToast snapshots renders message icon (default chat type) 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "left": 12.5,
        "position": "absolute",
        "right": 12.5,
        "zIndex": 9999,
      },
      {
        "top": 8,
      },
      {},
    ]
  }
>
  <View
    accessibilityLabel="Alice. Salut !. Touchez pour ouvrir."
    accessibilityRole="text"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "gap": 8.5,
          "minHeight": 64,
          "paddingHorizontal": 12.5,
          "paddingVertical": 10.5,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E5E7EB",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        false,
        {
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#6366F120",
          },
        ]
      }
    >
      <Text
        color="#6366F1"
        name="chatbubble"
        size={20}
      >
        chatbubble
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15.5,
              "lineHeight": 18,
            },
            {
              "color": "#111827",
            },
          ]
        }
      >
        Alice
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 13,
              "lineHeight": 16,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        Salut !
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
          "paddingVertical": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 2,
              "height": 18,
              "width": 3,
            },
            {
              "backgroundColor": "#D1D5DB",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`InAppToast snapshots renders notification icon 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "left": 12.5,
        "position": "absolute",
        "right": 12.5,
        "zIndex": 9999,
      },
      {
        "top": 8,
      },
      {},
    ]
  }
>
  <View
    accessibilityLabel="Nouvelle notification. Vous avez recu un message. Touchez pour ouvrir."
    accessibilityRole="text"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "gap": 8.5,
          "minHeight": 64,
          "paddingHorizontal": 12.5,
          "paddingVertical": 10.5,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E5E7EB",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        false,
        {
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#7C3AED20",
          },
        ]
      }
    >
      <Text
        color="#7C3AED"
        name="notifications"
        size={20}
      >
        notifications
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15.5,
              "lineHeight": 18,
            },
            {
              "color": "#111827",
            },
          ]
        }
      >
        Nouvelle notification
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 13,
              "lineHeight": 16,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        Vous avez recu un message
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
          "paddingVertical": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 2,
              "height": 18,
              "width": 3,
            },
            {
              "backgroundColor": "#D1D5DB",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`InAppToast snapshots renders success icon 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "left": 12.5,
        "position": "absolute",
        "right": 12.5,
        "zIndex": 9999,
      },
      {
        "top": 8,
      },
      {},
    ]
  }
>
  <View
    accessibilityLabel="Paiement reussi. . Touchez pour ouvrir."
    accessibilityRole="text"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "gap": 8.5,
          "minHeight": 64,
          "paddingHorizontal": 12.5,
          "paddingVertical": 10.5,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E5E7EB",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "borderLeftColor": "#10B981",
          "borderLeftWidth": 3,
        },
        {
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#10B98120",
          },
        ]
      }
    >
      <Text
        color="#10B981"
        name="checkmark-circle"
        size={20}
      >
        checkmark-circle
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15.5,
              "lineHeight": 18,
            },
            {
              "color": "#111827",
            },
          ]
        }
      >
        Paiement reussi
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
          "paddingVertical": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 2,
              "height": 18,
              "width": 3,
            },
            {
              "backgroundColor": "#D1D5DB",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`InAppToast snapshots renders warning icon 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "left": 12.5,
        "position": "absolute",
        "right": 12.5,
        "zIndex": 9999,
      },
      {
        "top": 8,
      },
      {},
    ]
  }
>
  <View
    accessibilityLabel="Attention. Connexion instable. Touchez pour ouvrir."
    accessibilityRole="text"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "gap": 8.5,
          "minHeight": 64,
          "paddingHorizontal": 12.5,
          "paddingVertical": 10.5,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E5E7EB",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "borderLeftColor": "#F59E0B",
          "borderLeftWidth": 3,
        },
        {
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#F59E0B20",
          },
        ]
      }
    >
      <Text
        color="#F59E0B"
        name="alert-circle"
        size={20}
      >
        alert-circle
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15.5,
              "lineHeight": 18,
            },
            {
              "color": "#111827",
            },
          ]
        }
      >
        Attention
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 13,
              "lineHeight": 16,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        Connexion instable
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
          "paddingVertical": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 2,
              "height": 18,
              "width": 3,
            },
            {
              "backgroundColor": "#D1D5DB",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`InAppToast snapshots renders with avatar (overrides icon) 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "left": 12.5,
        "position": "absolute",
        "right": 12.5,
        "zIndex": 9999,
      },
      {
        "top": 8,
      },
      {},
    ]
  }
>
  <View
    accessibilityLabel="Bob. Tu peux verifier ?. Touchez pour ouvrir."
    accessibilityRole="text"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "gap": 8.5,
          "minHeight": 64,
          "paddingHorizontal": 12.5,
          "paddingVertical": 10.5,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E5E7EB",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        false,
        {
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 16,
        },
      ]
    }
  >
    <Image
      cachePolicy="memory-disk"
      source="https://test.local/avatar.jpg"
      style={
        {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        }
      }
      transition={150}
    />
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15.5,
              "lineHeight": 18,
            },
            {
              "color": "#111827",
            },
          ]
        }
      >
        Bob
      </Text>
      <Text
        numberOfLines={2}
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 13,
              "lineHeight": 16,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        Tu peux verifier ?
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
          "paddingVertical": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 2,
              "height": 18,
              "width": 3,
            },
            {
              "backgroundColor": "#D1D5DB",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`InAppToast snapshots renders without body (title only) 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "left": 12.5,
        "position": "absolute",
        "right": 12.5,
        "zIndex": 9999,
      },
      {
        "top": 8,
      },
      {},
    ]
  }
>
  <View
    accessibilityLabel="Connecte. . Touchez pour ouvrir."
    accessibilityRole="text"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "gap": 8.5,
          "minHeight": 64,
          "paddingHorizontal": 12.5,
          "paddingVertical": 10.5,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E5E7EB",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "borderLeftColor": "#10B981",
          "borderLeftWidth": 3,
        },
        {
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 16,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#10B98120",
          },
        ]
      }
    >
      <Text
        color="#10B981"
        name="checkmark-circle"
        size={20}
      >
        checkmark-circle
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 15.5,
              "lineHeight": 18,
            },
            {
              "color": "#111827",
            },
          ]
        }
      >
        Connecte
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 4,
          "paddingVertical": 6,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 2,
              "height": 18,
              "width": 3,
            },
            {
              "backgroundColor": "#D1D5DB",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
